CIR-I4512 | detailed pdf alignment issue fixed

--- a/src/assests/scss/_costing.scss
+++ b/src/assests/scss/_costing.scss
@@ -573,3 +573,11 @@
     height: calc(38px * 80 / 100) !important;
   }
 }
+
+.pdf-print {
+  td {
+    span {
+      min-height: 30px;
+    }
+  }
+}
